--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,3 +1,11 @@
+@font-face {
+  font-family: 'bellotaregular';
+  src: url("../fonts/bellota-regular/Bellota-Regular-webfont.eot");
+  src: url("../fonts/bellota-regular/Bellota-Regular-webfont.eot") format("embedded-opentype"), url("../fonts/bellota-regular/Bellota-Regular-webfont.woff") format("woff"), url("../fonts/bellota-regular/Bellota-Regular-webfont.ttf") format("truetype"), url("../fonts/bellota-regular/Bellota-Regular-webfont.svg") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+
 * {
   margin: 0 !important;
   padding: 0 !important;
@@ -6,7 +14,7 @@
 body {
   margin: 0 auto;
   height: 100vh;
-  background-image: url("/assets/img/harrison-broadbent-c3YpscwJb04-unsplash.jpg");
+  background-image: url("../img/harrison-broadbent-c3YpscwJb04-unsplash.jpg");
   background-size: cover;
   background-attachment: fixed;
 }
@@ -15,6 +23,15 @@ nav {
   background: -webkit-gradient(linear, left bottom, left top, color-stop(1%, #15c5bd), to(#11a7a0));
   background: linear-gradient(0deg, #15c5bd 1%, #11a7a0 100%);
   height: 15vh;
+  -webkit-box-shadow: 0 4px 15px 10px rgba(0, 0, 0, 0.1);
+          box-shadow: 0 4px 15px 10px rgba(0, 0, 0, 0.1);
+}
+
+nav a {
+  margin-left: 20px !important;
+  margin-right: 20px !important;
+  font-family: "bellotaregular", sans-serif;
+  font-size: 2rem;
 }
 
 nav a img {
@@ -35,6 +52,7 @@ nav a img {
 }
 
 #jumbo .jumbotron div h1 {
+  font-family: "bellotaregular", sans-serif;
   font-size: 5rem;
 }
 
