--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -45,7 +45,7 @@ body .navbar-brand {
 #homeJumbo {
   margin-top: 14vh;
   height: 90vh;
-  background-image: url("../img/back.png");
+  background-image: url("../img/background.jpg");
   background-size: cover;
 }
 
