--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -46,7 +46,7 @@
     #homeJumbo {
         margin-top: 14vh;
         height: 90vh;
-        background-image: url("../img/back.png");
+        background-image: url("../img/background.jpg");
         background-size: cover;
         .jumbotron {
             float: right;
