--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -1,9 +1,4 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic);
-* {
-  padding: 0 !important;
-  margin: 0 !important;
-}
-
 /* color */
 body {
   width: 100%;
@@ -16,9 +11,10 @@ body h1,
 body h2,
 body h3 {
   font-weight: 300;
+  text-align: center;
 }
 
-body form {
+body .formulare {
   margin-top: 2vh;
   margin-left: auto;
   text-align: center;
@@ -26,7 +22,7 @@ body form {
   width: 70vw;
 }
 
-body form header {
+body .formulare header {
   padding: 1vh 3vw !important;
 }
 
@@ -36,10 +32,6 @@ body .btn-file {
 
 body .btn {
   padding: 1vw !important;
-}
-
-body input[type="file"] {
-  opacity: 0;
 }
 
 input,
@@ -54,15 +46,15 @@ textarea {
   -moz-border-radius: 5px;
   -ms-border-radius: 5px;
   -o-border-radius: 5px;
+  color: #252525 !important;
 }
 
 input:focus {
-  background: rgba(131, 131, 131, 0.2);
+  color: #252525 !important;
 }
 
 select,
 option {
-  margin-left: 1rem;
   margin-top: 1rem;
   width: 75%;
   text-align: center;
@@ -95,8 +87,10 @@ textarea {
 input[type="file"] {
   position: absolute;
   left: 0;
+  top: 20px;
   width: 150px;
-  height: 30px;
+  height: 50px;
+  opacity: 0;
 }
 
 .btn-primary {
@@ -106,6 +100,19 @@ input[type="file"] {
 
 .btn-success:hover {
   color: #252525 !important;
+}
+
+.good {
+  opacity: 0;
+}
+
+#formulare {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 @media screen and (max-width: 320px) {
