--- a/assets/css/smallscreen.css
+++ b/assets/css/smallscreen.css
@@ -1,24 +1,123 @@
-.form-inline {
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  padding: 0 !important;
-  margin: 0 !important;
+/* color */
+.btn-primary {
+  background: #252525;
+  color: #15c5bd;
+  margin: 2vh 0;
 }
 
-.navbar-nav li {
+body .navbar {
+  height: auto !important;
+}
+
+body .navbar-brand {
+  border: transparent;
+}
+
+body .navbar-collapse {
+  background: red;
+}
+
+body .navbar-collapse {
+  background: #252525;
+  margin: 0;
+  padding: 0;
+}
+
+body li.nav-item {
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+  width: 100%;
   text-align: center;
 }
 
-.separator {
-  display: none;
+body li.nav-item::hover {
+  background: rgba(255, 255, 255, 0.1);
+  color: #252525;
 }
 
-.jumbotron {
-  background: rgba(0, 0, 0, 0.4) !important;
-  color: #fff;
-  text-align: center;
-  font-family: bellotabold;
-  margin: 2vw 2vh;
+body #homeJumbo {
+  padding-bottom: 5vh !important;
+  height: auto;
+}
+
+body #homeJumbo .jumbotron {
+  padding: 5vh 0;
+  margin-top: 10vh;
+  width: 95%;
+}
+
+body #homeJumbo .container {
+  width: 90% !important;
+}
+
+body #bestSeller {
+  margin-top: -4vh;
+}
+
+body #bestSeller .background {
+  height: 15vh;
+}
+
+body #sectionDossier {
+  margin-bottom: 5vh;
+}
+
+body #sectionDossier .background {
+  height: 50vh;
+  background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><polygon points='100,100 100,0 -45,0' opacity='1' fill='rgba(48,48,48,1)'></polygon></svg>") no-repeat;
+}
+
+body #sectionDossier h4.titre {
+  text-align: right;
+}
+
+body #sectionDossier .display-3 {
+  font-size: 2rem;
+}
+
+body #footer .wave {
+  height: 25vh;
+  background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1000 500'><path fill='rgba(48,48,48,1)' fill-opacity='1' d='M0,160L34.3,144C68.6,128,137,96,206,117.3C274.3,139,343,213,411,208C480,203,549,117,617,112C685.7,107,754,181,823,181.3C891.4,181,960,107,1029,117.3C1097.1,128,1166,224,1234,234.7C1302.9,245,1371,171,1406,133.3L1440,96L1440,320L1405.7,320C1371.4,320,1303,320,1234,320C1165.7,320,1097,320,1029,320C960,320,891,320,823,320C754.3,320,686,320,617,320C548.6,320,480,320,411,320C342.9,320,274,320,206,320C137.1,320,69,320,34,320L0,320Z'></path></svg>") no-repeat;
+}
+
+body #footer .maine {
+  padding-top: 5vh;
+}
+
+body #footer input,
+body #footer button {
+  margin: 1vw;
+  width: 90%;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+}
+
+body #footer a {
+  margin: 0 2vw;
+}
+
+body #footer span {
+  margin-top: 1vh;
+}
+
+body #footer span:after {
+  content: ' ';
+  display: block;
+}
+
+body #footer object {
+  margin-top: 1.5vh;
+  width: 5%;
+}
+
+#catalog {
+  margin-top: 0vh;
+}
+
+.bankImage {
+  width: 40% !important;
+  float: center !important;
 }
 /*# sourceMappingURL=smallscreen.css.map */
