--- a/assets/scss/smallscreen.scss
+++ b/assets/scss/smallscreen.scss
@@ -1,21 +1,109 @@
-.form-inline {
-    justify-content: center;
-    padding: 0 !important;
-    margin: 0 !important;
+/* color */
+
+$primary: #15c5bd;
+$secondary: #303030;
+$dark: #252525;
+.btn-primary {
+    background: $dark;
+    color: $primary;
+    margin: 2vh 0;
 }
 
-.navbar-nav li {
-    text-align: center;
+body {
+    .navbar {
+        height: auto !important;
+    }
+    .navbar-brand {
+        border: transparent;
+    }
+    .navbar-collapse {
+        background: red;
+    }
+    .navbar-collapse {
+        background: $dark;
+        margin: 0;
+        padding: 0;
+    }
+    li.nav-item {
+        border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+        width: 100%;
+        text-align: center;
+    }
+    li.nav-item::hover {
+        background: rgba(255, 255, 255, 0.1);
+        color: $dark;
+    }
+    #homeJumbo {
+        padding-bottom: 5vh !important;
+        height: auto;
+        .jumbotron {
+            padding: 5vh 0;
+            margin-top: 10vh;
+            width: 95%;
+        }
+        .container {
+            width: 90% !important;
+        }
+    }
+    #bestSeller {
+        margin-top: -4vh;
+        .background {
+            height: 15vh;
+        }
+    }
+    #sectionDossier {
+        margin-bottom: 5vh;
+        .background {
+            height: 50vh;
+            background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><polygon points='100,100 100,0 -45,0' opacity='1' fill='rgba(48,48,48,1)'></polygon></svg>") no-repeat;
+        }
+        h4.titre {
+            text-align: right;
+        }
+        .display-3 {
+            font-size: 2rem;
+        }
+    }
+    #footer {
+        .wave {
+            height: 25vh;
+            background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1000 500'><path fill='rgba(48,48,48,1)' fill-opacity='1' d='M0,160L34.3,144C68.6,128,137,96,206,117.3C274.3,139,343,213,411,208C480,203,549,117,617,112C685.7,107,754,181,823,181.3C891.4,181,960,107,1029,117.3C1097.1,128,1166,224,1234,234.7C1302.9,245,1371,171,1406,133.3L1440,96L1440,320L1405.7,320C1371.4,320,1303,320,1234,320C1165.7,320,1097,320,1029,320C960,320,891,320,823,320C754.3,320,686,320,617,320C548.6,320,480,320,411,320C342.9,320,274,320,206,320C137.1,320,69,320,34,320L0,320Z'></path></svg>") no-repeat;
+        }
+        .maine {
+            padding-top: 5vh;
+        }
+        input,
+        button {
+            margin: 1vw;
+            width: 90%;
+            border-radius: 5px;
+            -webkit-border-radius: 5px;
+            -moz-border-radius: 5px;
+            -ms-border-radius: 5px;
+            -o-border-radius: 5px;
+        }
+        a {
+            margin: 0 2vw;
+        }
+        span {
+            margin-top: 1vh;
+        }
+        span:after {
+            content: ' ';
+            display: block;
+        }
+        object {
+            margin-top: 1.5vh;
+            width: 5%;
+        }
+    }
 }
 
-.separator {
-    display: none;
+#catalog {
+    margin-top: 0vh;
 }
 
-.jumbotron {
-    background: rgba(0, 0, 0, 0.4) !important;
-    color: #fff;
-    text-align: center;
-    font-family: bellotabold;
-    margin: 2vw 2vh;
+.bankImage {
+    width: 40% !important;
+    float: center !important;
 }
