--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -68,6 +68,7 @@ body .navbar-brand {
   margin-top: 14vh;
   height: 90vh;
   background-image: url("../img/background.jpg");
+  background-attachment: fixed;
   background-size: cover;
 }
 
@@ -290,6 +291,7 @@ body .navbar-brand {
 
 #formulare {
   margin: 15vh 0;
+  padding-top: 5vh;
   background: #15c5bd;
 }
 /*# sourceMappingURL=custom.css.map */
