--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -68,6 +68,7 @@ body {
     margin-top: 14vh;
     height: 90vh;
     background-image: url("../img/background.jpg");
+    background-attachment: fixed;
     background-size: cover;
     .jumbotron {
         margin: auto;
@@ -261,5 +262,6 @@ body {
 
 #formulare {
     margin: 15vh 0;
+    padding-top: 5vh;
     background: $primary;
 }
