--- a/assets/scss/smallscreen.scss
+++ b/assets/scss/smallscreen.scss
@@ -41,6 +41,12 @@ body {
             margin-top: 10vh;
             width: 95%;
         }
+        h1 {
+            font-size: 1.5rem !important;
+        }
+        h3 {
+            font-size: 1.3rem !important;
+        }
         .container {
             width: 90% !important;
         }
