--- a/assets/scss/smallscreen.scss
+++ b/assets/scss/smallscreen.scss
@@ -33,6 +33,12 @@ body {
         background: rgba(255, 255, 255, 0.1);
         color: $dark;
     }
+    header h1 {
+        font-size: 1.5rem !important;
+    }
+    header h3 {
+        font-size: 1.3rem !important;
+    }
     #homeJumbo {
         padding-bottom: 5vh !important;
         height: auto;
